Fixing of Styling of Gaps between carousel on Home and Philosophy

--- a/src/components/GlideCarousel.css
+++ b/src/components/GlideCarousel.css
@@ -2,6 +2,7 @@
     overflow: visible;
     position: relative;
     padding-bottom: 10rem;
+    padding-top: 15rem;
   }
   
   .glide__slide {
